# gitmoto

./: .gitignore  Cargo.toml  README.md  flake.nix
etc/: gitmoto.toml
src/: app.rs  config.rs  filesystem.rs  github.rs  handler.rs  main.rs  model.rs  presenter.rs  render.rs  service.rs  ssh.rs  template.rs  terminal_event.rs  tui.rs  ui.rs  util.rs
src/service/: filesystem.rs  terminal.rs
src/util/: common_prefix.rs
