[package]
name = "gitmoto"
version = "0.1.0"
edition = "2021"
description = "TUI for git remote management"

authors = ["Simon Guest <simon.guest@tesujimath.org>"]

[dependencies]
anyhow = "1.0.86"
async-stream = "0.3.5"
async-trait = "0.1.81"
futures = "0.3.28"
futures-util = "0.3.30"
globset = "0.4.14"
leaky-bucket = "1.1.2"
octocrab = { version = "0.39.0", features = ["stream"] }
pin-project = "1.1.5"
russh = { version = "0.45.0", features = ["openssl"] }
russh-sftp = "2.0.3"
subprocess = "0.2.9"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
